@@ -1,7 +1,7 @@
 #!/usr/bin/bash
 
 # Copyright (C) 2007 Apple Inc.  All rights reserved.
-#
+# 
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
 # are met:
